--- a/axis-extension.qmd
+++ b/axis-extension.qmd
@@ -26,6 +26,7 @@ library(effectsize)
 library(papaja)
 library(patchwork)
 library(insight)
+library(knitr)
 ```
 
 ```{r}
@@ -327,6 +328,13 @@ PsychoPy version 2022.1.4. Participants were instructed to carry out the experim
 
 Participants were permitted to move the response marker as many times as they liked before proceeding to the next trial, but could not return to previous trials. Finally, they were informed that all data presented was fictitious and were given the option to provide comments on the experiment and describe any strategies used. Average completion time was `r printnum(e1 %>% pull(total_duration) %>% mean(), digits = 1)` minutes.
 
+```{r}
+#| label: fig-e1-trial
+#| include: true
+
+include_graphics("images/trial_e1.png")
+```
+
 ### Design
 
 We employed a within-participants design: participants viewed 16 different charts in each of the two conditions (32 experimental trials total). The correspondence between scenarios and conditions was counterbalanced using two lists. However, all participants saw the same versions of the eight filler items and six attention check items.
@@ -431,6 +439,13 @@ We added the word 'surveyed' or 'assessed' to seven accompanying sentences in it
 The procedure was identical to Experiment 1, except for the addition of a confidence rating...
 
 Average completion time was `r printnum(e2 %>% pull(total_duration) %>% mean(), digits = 1)` minutes.
+
+```{r}
+#| label: fig-e2-trial
+#| include: true
+
+include_graphics("images/trial_e2.png")
+```
 
 ### Design
 
